--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,8 +1,8 @@
-appId: 'helioslauncher'
-productName: 'Helios Launcher'
+appId: 'cll'
+productName: 'Cursed Land Launcher'
 artifactName: '${productName}-setup-${version}.${ext}'
 
-copyright: 'Copyright © 2018-2024 Daniel Scalzi'
+copyright: 'Copyright © 2025 Skyyteq'
 
 asar: true
 compression: 'maximum'
