--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cll",
-  "version": "1.0.1",
-  "productName": "Cursed Land's Launcher",
-  "description": "Official Cursed Land's Launcher",
+  "version": "1.2.0",
+  "productName": "Cursed Lands Launcher",
+  "description": "Official Cursed Lands Launcher",
   "author": "Daniel Scalzi (https://github.com/dscalzi/)",
   "license": "UNLICENSED",
   "homepage": "https://github.com/FRErlingx/CLL",
